--- a/src/KnpRad/Resources/views/Overview/features/application_configuration.html.twig
+++ b/src/KnpRad/Resources/views/Overview/features/application_configuration.html.twig
@@ -4,7 +4,7 @@
     <div class="fs-container float-left">
         <ul class="fs-tree">
             <li class="dir">
-                src/KnpRad/config
+                src/KnpRad/Resources/config
                 <ul>
                     <li class="file yml">routing.yml</li>
                     <li class="file yml">services.yml</li>
