--- a/src/KnpRad/Resources/views/Overview/features/bundles_configs.html.twig
+++ b/src/KnpRad/Resources/views/Overview/features/bundles_configs.html.twig
@@ -4,7 +4,7 @@
     <div class="fs-container float-left">
         <ul class="fs-tree">
             <li class="dir">
-                config/bundles
+                app/config
                 <ul>
                     <li class="file yml">app.yml</li>
                     <li class="file yml">assetic.yml</li>
@@ -22,7 +22,7 @@
     </div>
 
     <p>
-        The <code>config/bundles</code> directory is concerned with configuring
+        The <code>app/config</code> directory is concerned with configuring
         all bundles used by the project. You can check the configuration files
         which come with the <em>RAD</em> distribution: most contain very
         detailed comments which can guide you through your more bizzare cases.
@@ -38,7 +38,7 @@
 
     <div class="clear"></div>
 
-<pre><code># config/bundles/app.yml
+<pre><code># app/config/app.yml
 all:
     foo: bar</code></pre>
 
