--- a/src/KnpRad/Resources/views/Overview/index.html.twig
+++ b/src/KnpRad/Resources/views/Overview/index.html.twig
@@ -63,7 +63,7 @@
                 forms layout. Then you'll just need to create action:
             </p>
 
-            <pre><code>./sf rad:generate:controller Default:index</code></pre>
+            <pre><code>./console rad:generate:controller Default:index</code></pre>
 
             <p>
                 And you'll have your first RAD action up and ready :-)
