--- a/src/KnpRad/Resources/views/Overview/features/application_bundle.html.twig
+++ b/src/KnpRad/Resources/views/Overview/features/application_bundle.html.twig
@@ -19,35 +19,40 @@
                         </ul>
                     </li>
                     <li class="dir">
-                        config
-                        <ul>
-                            <li class="file yml">routing.yml</li>
-                            <li class="file yml">services.yml</li>
-                        </ul>
-                    </li>
-                    <li class="dir">
-                        translations
-                        <ul>
-                            <li class="file yml">messages.fr.yml</li>
-                        </ul>
-                    </li>
-                    <li class="dir">
-                        public
-                        <ul>
-                            <li class="file js">js/jquery.js</li>
-                            <li class="file css">css/style.scss</li>
-                        </ul>
-                    </li>
-                    <li class="dir">
-                        views
+                        Resources
                         <ul>
                             <li class="dir">
-                                Main
+                                config
                                 <ul>
-                                    <li class="file twig">index.html.twig</li>
+                                    <li class="file yml">routing.yml</li>
+                                    <li class="file yml">services.yml</li>
                                 </ul>
                             </li>
-                            <li class="file twig">layout.html.twig</li>
+                            <li class="dir">
+                                translations
+                                <ul>
+                                    <li class="file yml">messages.fr.yml</li>
+                                </ul>
+                            </li>
+                            <li class="dir">
+                                public
+                                <ul>
+                                    <li class="file js">js/jquery.js</li>
+                                    <li class="file css">css/style.scss</li>
+                                </ul>
+                            </li>
+                            <li class="dir">
+                                views
+                                <ul>
+                                    <li class="dir">
+                                        Main
+                                        <ul>
+                                            <li class="file twig">index.html.twig</li>
+                                        </ul>
+                                    </li>
+                                    <li class="file twig">layout.html.twig</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -65,40 +70,7 @@
     <ol>
         <li><code>Controller</code> holds all your controllers. Refer to them via the shorter <code>App:CONTROLLER:ACTION</code> syntax.</li>
         <li><code>Tests</code> holds all your tests. The inner folder hierarchy should follow your project's one.</li>
-        <li><code>translations</code> holds your translations</li>
-        <li><code>public</code> holds all your public *.css, *.js and *.png files. This folder will be copied (symlinked) by the <code>assets:install</code> (without arguments) command.</li>
-        <li><code>views</code> holds your application views. All of them are available through the <code>App:SUBFOLDER:NAME.html.twig</code> syntax.</li>
+        <li><code>Resources</code> holds your resources</li>
     </ol>
     </div>
-
-    <div class="clear"></div>
-
-    <h4>Why don't we use the default bundle structure?</h4>
-
-    <p>
-        Mainly because <strong>you ain't gonna need it</strong>!
-    </p>
-
-    <p>
-        Bundles were invented for resusability and to package a single feature.
-    </p>
-
-    <p>
-        But experience proves that most of the time you don't reuse application specific code
-        and that you end up with a shitload of coupled, badly-named bundles.
-    </p>
-
-    <p>
-        As a result, you gain in complexity, not in reusability.
-    </p>
-
-    <p>
-        So, the main reason for this kind of structure is to focus on <strong>your project</strong>,
-        and not on artificial bundled project structure.
-    </p>
-
-    <p>
-        Additionaly, unlike usual third party bundles, your assets and views are as important as any other part of your code.
-        That's why the structure tries to flatten the distance between your code and these resources, by getting rid of a <i>3 depth</i> folder hierarchy.
-    </p>
 </section>
