--- a/src/KnpRad/Resources/views/Overview/overview.html.twig
+++ b/src/KnpRad/Resources/views/Overview/overview.html.twig
@@ -1,7 +1,7 @@
 <div class="fs-container">
     <ul class="fs-tree">
         <li class="dir">
-            config
+            app
             <a class="overview config" href="#config">
                 All configs in one place
             </a>
@@ -13,7 +13,7 @@
                     </a>
                 </li>
                 <li class="dir">
-                    bundles
+                    config
                     <a class="overview bundles" href="#bundles">
                         Bundle configuration in separate files
                     </a>
@@ -33,9 +33,6 @@
                     <a class="overview app-bundle" href="#app-bundle">
                         A single, class-free application bundle for your code
                     </a>
-                    <a class="overview resources" href="#app-bundle">
-                        No "Resources" folder: all resources live in application root
-                    </a>
                     <ul>
                         <li class="dir">Controller
                             <ul>
@@ -49,43 +46,48 @@
                         <li class="dir">Entity</li>
                         <li class="dir">Form</li>
                         <li class="dir">
-                            translations
-                            <ul>
-                                <li class="file yml">messages.fr.yml</li>
-                                <li class="file xml">messages.fr.xml</li>
-                            </ul>
-                        </li>
-                        <li class="dir">
-                            public
-                            <a class="overview pipeline" href="#pipeline">
-                                Assetic Pipeline to manage your asset dependencies
-                            </a>
-                            <ul>
-                                <li class="dir">js</li>
-                                <li class="dir">css</li>
-                                <li class="dir">img</li>
-                            </ul>
-                        </li>
-                        <li class="dir">
-                            config
-                            <a class="overview app-configs" href="#app-configs">
-                                Autoloadable routing and service container configurations
-                            </a>
-                            <ul>
-                                <li class="file yml">routing.yml</li>
-                                <li class="file yml">services.yml</li>
-                            </ul>
-                        </li>
-                        <li class="dir">
-                            views
-                            <a class="overview views" href="#views">
-                                Views mapped to application controller actions
-                            </a>
+                            Resources
                             <ul>
                                 <li class="dir">
-                                    Main
+                                    translations
                                     <ul>
-                                        <li class="file">index.html.twig</li>
+                                        <li class="file yml">messages.fr.yml</li>
+                                        <li class="file xml">messages.fr.xml</li>
+                                    </ul>
+                                </li>
+                                <li class="dir">
+                                    public
+                                    <a class="overview pipeline" href="#pipeline">
+                                        Assetic Pipeline to manage your asset dependencies
+                                    </a>
+                                    <ul>
+                                        <li class="dir">js</li>
+                                        <li class="dir">css</li>
+                                        <li class="dir">img</li>
+                                    </ul>
+                                </li>
+                                <li class="dir">
+                                    config
+                                    <a class="overview app-configs" href="#app-configs">
+                                        Autoloadable routing and service container configurations
+                                    </a>
+                                    <ul>
+                                        <li class="file yml">routing.yml</li>
+                                        <li class="file yml">services.yml</li>
+                                    </ul>
+                                </li>
+                                <li class="dir">
+                                    views
+                                    <a class="overview views" href="#views">
+                                        Views mapped to application controller actions
+                                    </a>
+                                    <ul>
+                                        <li class="dir">
+                                            Main
+                                            <ul>
+                                                <li class="file">index.html.twig</li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
